<resources>
    <string name="app_name">Astronomy Quiz</string>
    <string name="title">Astronomy Quiz - How much do you know?</string>
    <string name="question1">1. Telescopes have significantly changed over time. Do you know who invented the first telescope though?</string>
    <string name="question2">2. How many planets with rings are there in our solar system?</string>
    <string name="question3">3. Venus is the.. </string>
    <string name="question4">4. Which Star is called Earth’s satellite?</string>
    <string name="question5">5. What is the Orbital period of Moon?</string>
    <string name="question6">6. Which is a very well recognized dwarf planet?</string>
    <string name="question7">7. Which planet has approximately the same landmass as Earth?</string>
    <string name="name">Name</string>
    <string name="date">Date (MM/DD/YYYY)</string>
    <string name="galileo_galilei">Galileo Galilei</string>
    <string name="hans_lippershey">Hans Lippershey</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="hottest_planet">hottest planet</string>
    <string name="largest_planet">largest planet</string>
    <string name="morning_star">Morning Star</string>
    <string name="sun">Sun</string>
    <string name="moon">Moon</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="pluto">Pluto</string>
    <string name="mercury">Mercury</string>
    <string name="jupiter">Jupiter</string>
    <string name="mars">Mars</string>
    <string name="venus">Venus</string>
    <string name="submit_and_recieve_scores">Submit and recieve scores</string>
    <string name="four">Four</string>

</resources>
